--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -1,3 +1,45 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+
 body{
-    background-color: linear-gradient(108deg, #30007E 0%, rgba(26, 0, 69, 0.45) 100%);
+    background: linear-gradient(108deg, #23005b 100%, rgb(16, 0, 42) 100%);
+}
+
+.menu{
+    display: flex;
+    background: #D9D9D9;
+    color: black;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin: 30px 50px;
+    border-radius: 19px;
+    height: 3vh;
+    width: 90vw;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.links{
+    display: flex;
+}
+
+.products a,
+.about a,
+.title a{
+    text-decoration: none;
+    color: black;
+    margin: 0px 15px;
+    font-weight: bold;
+    font-size: 17px;
+    font-style: italic;
+}
+
+.products a:hover,
+.about a:hover,
+.title a:hover{
+    color:#23005b;
+    transition: .3s;
 }
